--- a/section6/tindog/index.html
+++ b/section6/tindog/index.html
@@ -73,14 +73,27 @@
 
   <section id="features">
 
-    <h3>Easy to use.</h3>
-    <p>So easy to use, even your dog could do it.</p>
+    <div class="row">
 
-    <h3>Elite Clientele</h3>
-    <p>We have all the dogs, the greatest dogs.</p>
+      <div class="col-lg-4 feature-box">
+        <span class="fas fa-check-circle fa-4x icon"></span>
+        <h3>Easy to use</h3>
+        <p>So easy to use, even your dog could do it.</p>
+      </div>
+        
+      <div class="col-lg-4 feature-box">
+        <span class="fas fa-bullseye fa-4x icon"></span>
+        <h3>Elite Clientele</h3>
+        <p>We have all the dogs, the greatest dogs.</p>
+      </div>
 
-    <h3>Guaranteed to work.</h3>
-    <p>Find the love of your dog's life or your money back.</p>
+      <div class="col-lg-4 feature-box">
+        <span class="fas fa-heart fa-4x icon"></span>
+        <h3>Guaranteed to work</h3>
+        <p>Find the love of your dog's life or your money back.</p>
+      </div>
+      
+    </div>
 
   </section>
 
