--- a/section7/tindog/index.html
+++ b/section7/tindog/index.html
@@ -39,13 +39,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                  <a class="nav-link" href="">Contact</a>
+                  <a class="nav-link" href="#footer">Contact</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="">Pricing</a>
+                  <a class="nav-link" href="#pricing">Pricing</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="">Download</a>
+                  <a class="nav-link" href="#cta">Download</a>
               </li>
           </ul>
         </div>
@@ -204,9 +204,10 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
+    <button type="button" class="btn btn-dark btn-lg download-button"><span class="fab fa-apple"></span> Download</button>
+    <button type="button" class="btn btn-light btn-lg download-button"><span class="fab fa-google-play"></span> Download</button>
+  
 
   </section>
 
@@ -215,6 +216,10 @@
 
   <footer id="footer">
 
+    <span class="social-icon fab fa-facebook-f"></span>
+    <span class="social-icon fab fa-twitter"></span>
+    <span class="social-icon fab fa-instagram"></span>
+    <span class="social-icon fas fa-envelope"></span>
     <p>© Copyright 2018 TinDog</p>
 
   </footer>
