--- a/section7/tindog/index.html
+++ b/section7/tindog/index.html
@@ -26,7 +26,7 @@
 
 <body>
 
-  <section id="title">
+  <section id="title" class="colored-section">
 
     <div class="container-fluid">
 
@@ -71,7 +71,7 @@
 
   <!-- Features -->
 
-  <section id="features">
+  <section id="features" class="white-section">
 
     <div class="container-fluid">
 
@@ -104,7 +104,7 @@
 
   <!-- Testimonials -->
 
-  <section id="testimonials">
+  <section id="testimonials" class="colored-section">
 
     <div id = "testimonial-carousel" class="carousel slide" data-ride="false">
 
@@ -134,7 +134,7 @@
 
   <!-- Press -->
 
-  <section id="press">
+  <section id="press" class="colored-section">
 
     <img class="press-image" src="images/techcrunch.png" alt="tc-logo">
     <img class="press-image" src="images/tnw.png" alt="tnw-logo">
@@ -146,7 +146,7 @@
 
   <!-- Pricing -->
 
-  <section id="pricing">
+  <section id="pricing" class="white-section">
 
     <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
@@ -206,7 +206,7 @@
 
   <!-- Call to Action -->
 
-  <section id="cta">
+  <section id="cta" class="colored-section">
 
     <div class="container-fluid">
     
@@ -221,7 +221,7 @@
 
   <!-- Footer -->
 
-  <footer id="footer">
+  <footer id="footer" class="white-section">
 
     <div class="container-fluid">
 
@@ -230,7 +230,7 @@
       <span class="social-icon fab fa-instagram"></span>
       <span class="social-icon fas fa-envelope"></span>
       <p>© Copyright 2018 TinDog</p>
-      
+
     </div>
 
   </footer>
